parser/parser/MCPParser.py
# Generated from MCP.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCPParser ( Parser ):

    grammarFileName = "MCP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'model'", "'{'", "'}'", "'input:'", "':'", 
                     "'output:'", "'context'", "'interaction'", "'('", "')'", 
                     "'->'", "','", "'use'", "'bind'", "'to'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IDENTIFIER", "WS" ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_modelDecl = 2
    RULE_modelField = 3
    RULE_contextDecl = 4
    RULE_contextField = 5
    RULE_interactionDecl = 6
    RULE_argList = 7
    RULE_argument = 8
    RULE_interactionBody = 9
    RULE_useStmt = 10
    RULE_bindStmt = 11
    RULE_path = 12
    RULE_typename = 13

    ruleNames =  [ "prog", "statement", "modelDecl", "modelField", "contextDecl", 
                   "contextField", "interactionDecl", "argList", "argument", 
                   "interactionBody", "useStmt", "bindStmt", "path", "typename" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    IDENTIFIER=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCPParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCPParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCPParser.StatementContext,i)


        def getRuleIndex(self):
            return MCPParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = MCPParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCPParser.T__0) | (1 << MCPParser.T__6) | (1 << MCPParser.T__7))) != 0):
                self.state = 28
                self.statement()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(MCPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelDecl(self):
            return self.getTypedRuleContext(MCPParser.ModelDeclContext,0)


        def contextDecl(self):
            return self.getTypedRuleContext(MCPParser.ContextDeclContext,0)


        def interactionDecl(self):
            return self.getTypedRuleContext(MCPParser.InteractionDeclContext,0)


        def getRuleIndex(self):
            return MCPParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MCPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCPParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.modelDecl()
                pass
            elif token in [MCPParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.contextDecl()
                pass
            elif token in [MCPParser.T__7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.interactionDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCPParser.IDENTIFIER, 0)

        def modelField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCPParser.ModelFieldContext)
            else:
                return self.getTypedRuleContext(MCPParser.ModelFieldContext,i)


        def getRuleIndex(self):
            return MCPParser.RULE_modelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelDecl" ):
                listener.enterModelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelDecl" ):
                listener.exitModelDecl(self)




    def modelDecl(self):

        localctx = MCPParser.ModelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modelDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(MCPParser.T__0)
            self.state = 42
            self.match(MCPParser.IDENTIFIER)
            self.state = 43
            self.match(MCPParser.T__1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCPParser.T__3 or _la==MCPParser.T__5:
                self.state = 44
                self.modelField()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(MCPParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelFieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCPParser.IDENTIFIER, 0)

        def typename(self):
            return self.getTypedRuleContext(MCPParser.TypenameContext,0)


        def getRuleIndex(self):
            return MCPParser.RULE_modelField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelField" ):
                listener.enterModelField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelField" ):
                listener.exitModelField(self)




    def modelField(self):

        localctx = MCPParser.ModelFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modelField)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCPParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.match(MCPParser.T__3)
                self.state = 53
                self.match(MCPParser.IDENTIFIER)
                self.state = 54
                self.match(MCPParser.T__4)
                self.state = 55
                self.typename()
                pass
            elif token in [MCPParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(MCPParser.T__5)
                self.state = 57
                self.match(MCPParser.IDENTIFIER)
                self.state = 58
                self.match(MCPParser.T__4)
                self.state = 59
                self.typename()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContextDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCPParser.IDENTIFIER, 0)

        def contextField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCPParser.ContextFieldContext)
            else:
                return self.getTypedRuleContext(MCPParser.ContextFieldContext,i)


        def getRuleIndex(self):
            return MCPParser.RULE_contextDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContextDecl" ):
                listener.enterContextDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContextDecl" ):
                listener.exitContextDecl(self)




    def contextDecl(self):

        localctx = MCPParser.ContextDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_contextDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(MCPParser.T__6)
            self.state = 63
            self.match(MCPParser.IDENTIFIER)
            self.state = 64
            self.match(MCPParser.T__1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCPParser.IDENTIFIER:
                self.state = 65
                self.contextField()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(MCPParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContextFieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCPParser.IDENTIFIER, 0)

        def typename(self):
            return self.getTypedRuleContext(MCPParser.TypenameContext,0)


        def getRuleIndex(self):
            return MCPParser.RULE_contextField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContextField" ):
                listener.enterContextField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContextField" ):
                listener.exitContextField(self)




    def contextField(self):

        localctx = MCPParser.ContextFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_contextField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(MCPParser.IDENTIFIER)
            self.state = 74
            self.match(MCPParser.T__4)
            self.state = 75
            self.typename()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InteractionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MCPParser.IDENTIFIER)
            else:
                return self.getToken(MCPParser.IDENTIFIER, i)

        def argList(self):
            return self.getTypedRuleContext(MCPParser.ArgListContext,0)


        def interactionBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCPParser.InteractionBodyContext)
            else:
                return self.getTypedRuleContext(MCPParser.InteractionBodyContext,i)


        def getRuleIndex(self):
            return MCPParser.RULE_interactionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteractionDecl" ):
                listener.enterInteractionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteractionDecl" ):
                listener.exitInteractionDecl(self)




    def interactionDecl(self):

        localctx = MCPParser.InteractionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_interactionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MCPParser.T__7)
            self.state = 78
            self.match(MCPParser.IDENTIFIER)
            self.state = 79
            self.match(MCPParser.T__8)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCPParser.IDENTIFIER:
                self.state = 80
                self.argList()


            self.state = 83
            self.match(MCPParser.T__9)
            self.state = 84
            self.match(MCPParser.T__10)
            self.state = 85
            self.match(MCPParser.IDENTIFIER)
            self.state = 86
            self.match(MCPParser.T__1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCPParser.T__12 or _la==MCPParser.T__13:
                self.state = 87
                self.interactionBody()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(MCPParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCPParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(MCPParser.ArgumentContext,i)


        def getRuleIndex(self):
            return MCPParser.RULE_argList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgList" ):
                listener.enterArgList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgList" ):
                listener.exitArgList(self)




    def argList(self):

        localctx = MCPParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.argument()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCPParser.T__11:
                self.state = 96
                self.match(MCPParser.T__11)
                self.state = 97
                self.argument()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCPParser.IDENTIFIER, 0)

        def typename(self):
            return self.getTypedRuleContext(MCPParser.TypenameContext,0)


        def getRuleIndex(self):
            return MCPParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)




    def argument(self):

        localctx = MCPParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(MCPParser.IDENTIFIER)
            self.state = 104
            self.match(MCPParser.T__4)
            self.state = 105
            self.typename()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InteractionBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def useStmt(self):
            return self.getTypedRuleContext(MCPParser.UseStmtContext,0)


        def bindStmt(self):
            return self.getTypedRuleContext(MCPParser.BindStmtContext,0)


        def getRuleIndex(self):
            return MCPParser.RULE_interactionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteractionBody" ):
                listener.enterInteractionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteractionBody" ):
                listener.exitInteractionBody(self)




    def interactionBody(self):

        localctx = MCPParser.InteractionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_interactionBody)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCPParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.useStmt()
                pass
            elif token in [MCPParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.bindStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UseStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCPParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MCPParser.RULE_useStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseStmt" ):
                listener.enterUseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseStmt" ):
                listener.exitUseStmt(self)




    def useStmt(self):

        localctx = MCPParser.UseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_useStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(MCPParser.T__12)
            self.state = 112
            self.match(MCPParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCPParser.PathContext)
            else:
                return self.getTypedRuleContext(MCPParser.PathContext,i)


        def getRuleIndex(self):
            return MCPParser.RULE_bindStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBindStmt" ):
                listener.enterBindStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBindStmt" ):
                listener.exitBindStmt(self)




    def bindStmt(self):

        localctx = MCPParser.BindStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bindStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MCPParser.T__13)
            self.state = 115
            self.path()
            self.state = 116
            self.match(MCPParser.T__14)
            self.state = 117
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MCPParser.IDENTIFIER)
            else:
                return self.getToken(MCPParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return MCPParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)




    def path(self):

        localctx = MCPParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MCPParser.IDENTIFIER)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCPParser.T__15:
                self.state = 120
                self.match(MCPParser.T__15)
                self.state = 121
                self.match(MCPParser.IDENTIFIER)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypenameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCPParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MCPParser.RULE_typename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypename" ):
                listener.enterTypename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypename" ):
                listener.exitTypename(self)




    def typename(self):

        localctx = MCPParser.TypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_typename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MCPParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





